2005-06-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/viewer.py: (EncodingDialog): 
	* pitivi/ui/encodingdialog.glade:
	Added settings in Encoding Dialog

	* pitivi/ui/viewer.py:
	Added audioconvert in the Audio Sink Thread

	* pitivi/ui/projectsettings.py:
	* pitivi/ui/projectsettings.glade:
	* pitivi/ui/gstwidget.py:
	* pitivi/ui/elementsettingsdialog.glade:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/exportsettingswidget.glade:
	Split up Settings Dialogs in smaller widgets

	* pitivi/ui/glade.py:
	Wrapper for the run() dialog method

	* pitivi/bin.py:
	SmartBin are no longer gst.Thread but gst.Bin
	Added support for element properties in timeline encoding thread

	* pitivi/objectfactory.py: (FileSourceFactory):
	Added support for 'pixel-aspect-ratio'

	* pitivi/playground.py:
	Removed useless state_change()

	* pitivi/project.py:
	* pitivi/settings.py:
	Moved ProjectSettings to a more generic ExportSettings

	* pitivi/debug.py:
	Debugging functions

2005-06-08  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/discoverer.py: (Discoverer): 
	Added 'ready' signal for end of discovery

2005-06-05  Jono Bacon <jonobacon@gmail.com>

	Reviewed by : Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/mainwindow.py: (PitiviMainWindow.__init__): 
	Maximize main window at startup

2005-06-03  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/projectsettings.glade: 
	Translation

2005-06-03  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/objectfactory.py: (FileSourceFactory.make_video_adapter_bin): 
	filtered link between videobox and videoscale to avoid borkage...

2005-06-03  Jono Bacon <jonobacon@gmail.com>

	Reviewed by: Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/mainwindow.py: (PitiviMainWindow.about_cb): 
	Added about dialog

2005-05-09  Edward Hervey  <bilboed@bilboed.com>

	* docs/design/timeline.txt:
	Design document for the timeline

2005-05-04  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/discoverer.py: